Bug #1495 - Admin bar, black vertical line missing after megaphone icon

--- a/wp-content/mu-plugins/css/openlab-toolbar.less
+++ b/wp-content/mu-plugins/css/openlab-toolbar.less
@@ -342,6 +342,9 @@
                     }
                 }
             }
+            #wp-admin-bar-activity{
+                border-right: 1px solid #000000;
+            }
             #wp-admin-bar-top-logout,
             #wp-admin-bar-bp-login,
             #wp-admin-bar-bp-register{
